--- a/index.html
+++ b/index.html
@@ -4,8 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1> Hello World! </h1>
+    <div id="navbar">
+    <a id="logo">CODEMAP<a>
+    <a href="#">Courses</a>
+    <a href="#">Events</a>
+    <a href="#">Blog</a>
+    <a href="#">About</a>
+    <a href="#">Contact</a>
+    <a class="login" href="#">Login</a>
+    <button>Register</button>
+    </div>
+    <br>
+    <br>
+<br>
+<br>
+<br>
+<br>
+<br>
+    <h1> Learn to Code and Level Up Your </h1>
+    <h1> Skills </h1>
+    <br>
+    <br>
+    <br>
+
+    <h> Unlock your potential with codemap</h>
+
+    <br>
+    <br>
+    <br>
+    <div id="start">
+        <button>Get Started</button>
+        <a href="#">Learn more</a>
+    </div>
+<br>
+<br>
+    <div id="features">
+        <p>Features<p>
+
+    </div>
 </body>
 </html>
