--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <br>
 <br>
     <h1> Learn to Code and Level Up Your </h1>
-    <h1> Skills </h1>
+    <h1> Skills To Learn</h1>
     <br>
     <br>
     <br>
